Fixed Header 1 text being too big on wide screens

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ html
 
 h1
 {
-    font-size: 9vw;
+    font-size: min(9vw, 400%);
 }
 
 p
